# kct-viewer

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  KCTViewer.pri  KCTViewer.pro  KCTViewer.rc  KCTViewer.sublime-project  KVMainWindow.cpp  KVMainWindow.h  KVMainWindow.ui  KVNetworkAccessManager.cpp  KVSettingsDialog.cpp  KVSettingsDialog.ui  KVWebView.cpp  README.md  index.html
forms/: KVMainWindow.ui  KVSettingsDialog.ui
resources/: CMakeLists.txt  KCTViewer.desktop  KCTViewer.icns  KVMainWindow.ui  KVSettingsDialog.ui  index.html  kancolletool-viewer.desktop  report_blacklist.json  resources.qrc
src/: CMakeLists.txt  Info.plist.in  KCTViewer.rc  KVCookieJar.cpp  KVCookieJar.h  KVDefaults.h  KVGameWrapper.cpp  KVGameWrapper.h  KVJsonStore.cpp  KVJsonStore.h  KVMainWindow.cpp  KVMainWindow.cpp.old  KVMainWindow.h  KVMainWindow.h.old  KVNetworkAccessManager.cpp  KVNetworkAccessManager.h  KVNetworkReply.cpp  KVNetworkReply.h  KVNetworkReply.h.old  KVScreenshooter.cpp  KVScreenshooter.h  KVScreenshot.cpp  KVScreenshot.h  KVScreenshoter.cpp  KVScreenshoter.h  KVSettingsDialog.cpp  KVSettingsDialog.h  KVTranslator.cpp  KVTranslator.cpp.old  KVTranslator.h  KVTranslator.h.old  KVUtil.cpp  KVUtil.h  KVWebView.cpp  KVWebView.h  main.cpp  src.pro  version.h.in
test/: CMakeLists.txt  KCTViewerTest.cpp  KCTViewerTest.h  main.cpp  test.pro  test_KVGameWrapper.cpp  test_KVJsonStore.cpp  test_KVMainWindow.cpp  test_KVNetworkReply.cpp  test_KVTranslator.cpp  test_KVUtil.cpp  test_common.h
tests/: KCTViewerTest  TestKCTViewer.pro  kancolle-viewer-test_resource.rc  tests.pro
